--- a/index.html
+++ b/index.html
@@ -295,11 +295,17 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>这两天回去</p>
-                <p>胖了</p>
-                <p>为什么会胖呢</p>
-                <p>原来是对赵瑾的思念</p>
-                <p>沉甸甸的</p>
+                <p>赵瑾</p>
+                <p>我想和你去好多地方</p>
+                <p>想和你去做好多事情</p>
+                <p>像我们一开始时</p>
+                <p>如果没有你</p>
+                <p>我甚至不会去沙滩公园，更不用说平潭福清福鼎</p>
+                <p>因为我不是一个活力四射的人</p>
+                <p>我有时渴望无边无际的自由</p>
+                <p>有时也渴望小小平淡的生活</p>
+                <p>无论如何</p>
+                <p>只要我们在一起</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
         </div>
