--- a/index.html
+++ b/index.html
@@ -296,16 +296,12 @@
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
                 <p>赵瑾</p>
-                <p>我想和你去好多地方</p>
-                <p>想和你去做好多事情</p>
-                <p>像我们一开始时</p>
-                <p>如果没有你</p>
-                <p>我甚至不会去沙滩公园，更不用说平潭福清福鼎</p>
-                <p>因为我不是一个活力四射的人</p>
-                <p>我有时渴望无边无际的自由</p>
-                <p>有时也渴望小小平淡的生活</p>
-                <p>无论如何</p>
-                <p>只要我们在一起</p>
+                <p>希望你能有做到任何事的信心</p>
+                <p>坚信自己能做到的决心</p>
+                <p>和面对任何困难都不畏惧退缩的恒心</p>
+                <p>我相信</p>
+                <p>只要你努力想去做到的事情</p>
+                <p>都会实现</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
         </div>
