--- a/index.html
+++ b/index.html
@@ -295,13 +295,13 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>赵瑾</p>
-                <p>希望你能有做到任何事的信心</p>
-                <p>坚信自己能做到的决心</p>
-                <p>和面对任何困难都不畏惧退缩的恒心</p>
-                <p>我相信</p>
-                <p>只要你努力想去做到的事情</p>
-                <p>都会实现</p>
+                <p>今天和赵瑾拍照了</p>
+                <p>真的好累</p>
+                <p>拍的我脑袋重重的</p>
+                <p>精神萎靡</p>
+                <p>好在最后还是拍出了好看的照片</p>
+                <p>美丽的赵瑾</p>
+                <p>开心</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
         </div>
