--- a/index.html
+++ b/index.html
@@ -295,13 +295,10 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>我爱你我爱你我爱你我爱你我爱你我爱你我爱你我爱你我爱你我爱你我爱你我爱你我爱你我爱你我爱你我爱你我爱你我爱你我爱你我爱你我爱你</p>
-                <p>我爱你我爱你我爱你我爱你我爱你我爱你我爱你我爱你我爱你我爱你我爱你我爱你我爱你我爱你我爱你我爱你我爱你我爱你我爱你我爱你我爱你</p>
-                <p>我爱你我爱你我爱你我爱你我爱你我爱你我爱你我爱你我爱你我爱你我爱你我爱你我爱你我爱你我爱你我爱你我爱你我爱你我爱你我爱你我爱你</p>
-                <p>我爱你我爱你我爱你我爱你我爱你我爱你我爱你我爱你我爱你我爱你我爱你我爱你我爱你我爱你我爱你我爱你我爱你我爱你我爱你我爱你我爱你</p>
-                <p>我爱你我爱你我爱你我爱你我爱你我爱你我爱你我爱你我爱你我爱你我爱你我爱你我爱你我爱你我爱你我爱你我爱你我爱你我爱你我爱你我爱你</p>
-                <p>我爱你我爱你我爱你我爱你我爱你我爱你我爱你我爱你我爱你我爱你我爱你我爱你我爱你我爱你我爱你我爱你我爱你我爱你我爱你我爱你我爱你/p>
-                <p>爱赵瑾爱赵瑾爱赵瑾爱赵瑾爱赵瑾爱赵瑾爱赵瑾爱赵瑾爱赵瑾爱赵瑾爱赵瑾爱赵瑾爱赵瑾爱赵瑾爱赵瑾爱赵瑾爱赵瑾爱赵瑾爱赵瑾爱赵瑾爱赵瑾</p>
+                <p>等以后我们老了</p>
+                <p>我们就倒着睡</p>
+                <p>谁也不打扰谁</p>
+                <p>想想都好幸福</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
         </div>
