--- a/index.html
+++ b/index.html
@@ -295,16 +295,14 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>我仔细思考了一番</p>
-                <p>我觉得南昌确实不错</p>
-                <p>我们去四天三夜</p>
-                <p>现在是淡季</p>
-                <p>我们先去滕王阁</p>
-                <p>吟诗对唱</p>
-                <p>然后第二天去万寿宫、大士院学习</p>
-                <p>第三天就去博物馆、双子塔逛逛</p>
-                <p>最后一天去八一广场、人民公园</p>
-                <p>真不错吧嘿嘿</p>
+                <p>瑾瑾我爱你</p>
+                <p>哈哈哈哈哈</p>
+                <p>赵瑾也爱我</p>
+                <p>思密达</p>
+                <p>范敦锦是个好孩子</p>
+                <p>范敦锦的键盘确实还不错</p>
+                <p>赵瑾都可以盲打了</p>
+                <p>范敦锦真的会弹吉他呀</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
         </div>
