--- a/index.html
+++ b/index.html
@@ -295,14 +295,14 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>瑾瑾我爱你</p>
-                <p>哈哈哈哈哈</p>
-                <p>赵瑾也爱我</p>
-                <p>思密达</p>
-                <p>范敦锦是个好孩子</p>
-                <p>范敦锦的键盘确实还不错</p>
-                <p>赵瑾都可以盲打了</p>
-                <p>范敦锦真的会弹吉他呀</p>
+                <p>如果清明不出去的话</p>
+                <p>我们可以第一天去鼓山</p>
+                <p>第二天去螺洲古镇</p>
+                <p>第三天去逛街</p>
+                <p>第四天去。。。</p>
+                <p>拍好多好多的美照</p>
+                <p>吃好多好多的好吃的</p>
+                <p>留下好多好多的回忆</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
         </div>
