--- a/index.html
+++ b/index.html
@@ -295,14 +295,14 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>如果清明不出去的话</p>
-                <p>我们可以第一天去鼓山</p>
-                <p>第二天去螺洲古镇</p>
-                <p>第三天去逛街</p>
-                <p>第四天去。。。</p>
-                <p>拍好多好多的美照</p>
-                <p>吃好多好多的好吃的</p>
-                <p>留下好多好多的回忆</p>
+                <p>我把我的整个灵魂给你</p>
+                <p>连同它的怪癖</p>
+                <p>耍小脾气</p>
+                <p>忽明忽暗</p>
+                <p>一千八百种坏毛病</p>
+                <p>它真讨厌</p>
+                <p>只有一点好</p>
+                <p>爱你</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
         </div>
