--- a/index.html
+++ b/index.html
@@ -295,14 +295,14 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>我把我的整个灵魂给你</p>
-                <p>连同它的怪癖</p>
-                <p>耍小脾气</p>
-                <p>忽明忽暗</p>
-                <p>一千八百种坏毛病</p>
-                <p>它真讨厌</p>
-                <p>只有一点好</p>
-                <p>爱你</p>
+                <p>赵瑾问我喜欢她什么</p>
+                <p>我一时说不上来</p>
+                <p>我说翻翻小网站的截图</p>
+                <p>或许可以找到答案</p>
+                <p>可是赵瑾喜欢我什么呢</p>
+                <p>赵瑾爱我吗</p>
+                <p>我今天知道了</p>
+                <p>因为可以在赵瑾的小网站里找到答案</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
         </div>
