--- a/index.html
+++ b/index.html
@@ -295,14 +295,13 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>赵瑾问我喜欢她什么</p>
-                <p>我一时说不上来</p>
-                <p>我说翻翻小网站的截图</p>
-                <p>或许可以找到答案</p>
-                <p>可是赵瑾喜欢我什么呢</p>
-                <p>赵瑾爱我吗</p>
-                <p>我今天知道了</p>
-                <p>因为可以在赵瑾的小网站里找到答案</p>
+                <p>今天我们打碎了我送给她的口红qwq</p>
+                <p>都没怎么用</p>
+                <p>太可惜了</p>
+                <p>后来灵机一动</p>
+                <p>榨干了她最后的价值哈哈哈哈</p>
+                <p>可是赵瑾又没口红了</p>
+                <p>再给她买一个吧</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
         </div>
