--- a/index.html
+++ b/index.html
@@ -295,13 +295,13 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>今天我们打碎了我送给她的口红qwq</p>
-                <p>都没怎么用</p>
-                <p>太可惜了</p>
-                <p>后来灵机一动</p>
-                <p>榨干了她最后的价值哈哈哈哈</p>
-                <p>可是赵瑾又没口红了</p>
-                <p>再给她买一个吧</p>
+                <p>健身真的能让人自信</p>
+                <p>我感觉自己越来越帅了</p>
+                <p>越来越强壮了</p>
+                <p>我是strong boy</p>
+                <p>我可以保护我的赵瑾宝宝了</p>
+                <p>吼吼吼</p>
+                <p>爱她</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
         </div>
