--- a/index.html
+++ b/index.html
@@ -295,13 +295,14 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>健身真的能让人自信</p>
-                <p>我感觉自己越来越帅了</p>
-                <p>越来越强壮了</p>
-                <p>我是strong boy</p>
-                <p>我可以保护我的赵瑾宝宝了</p>
-                <p>吼吼吼</p>
-                <p>爱她</p>
+                <p>其实我也很想和赵瑾一起存钱</p>
+                <p>但是上次赵瑾中途退出我真的很生气</p>
+                <p>当时我就决定再也不和他存钱了</p>
+                <p>我最讨厌半途而废了哼哼</p>
+                <p>但我也能理解</p>
+                <p>所以再和她存一次小荷包吧</p>
+                <p>希望我们能存出一笔大款</p>
+                <p>作为我们的爱情基金！</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
         </div>
