--- a/index.html
+++ b/index.html
@@ -295,14 +295,13 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>其实我也很想和赵瑾一起存钱</p>
-                <p>但是上次赵瑾中途退出我真的很生气</p>
-                <p>当时我就决定再也不和他存钱了</p>
-                <p>我最讨厌半途而废了哼哼</p>
-                <p>但我也能理解</p>
-                <p>所以再和她存一次小荷包吧</p>
-                <p>希望我们能存出一笔大款</p>
-                <p>作为我们的爱情基金！</p>
+                <p>明天九点和赵瑾去图书馆学习</p>
+                <p>写毕业论文！</p>
+                <p>搞研究！</p>
+                <p>也要学英语！</p>
+                <p>学python！</p>
+                <p>看文章！</p>
+                <p>进步！</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
         </div>
