--- a/index.html
+++ b/index.html
@@ -295,13 +295,13 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>明天九点和赵瑾去图书馆学习</p>
-                <p>写毕业论文！</p>
-                <p>搞研究！</p>
-                <p>也要学英语！</p>
-                <p>学python！</p>
-                <p>看文章！</p>
-                <p>进步！</p>
+                <p>今天一定要在一点前睡觉！</p>
+                <p>睡觉睡觉睡觉</p>
+                <p>zzzzz</p>
+                <p>现在感觉很好</p>
+                <p>已经有困意了</p>
+                <p>晚安宝宝</p>
+                <p>爱你</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
         </div>
