--- a/index.html
+++ b/index.html
@@ -295,12 +295,13 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>今天一定要在一点前睡觉！</p>
-                <p>睡觉睡觉睡觉</p>
-                <p>zzzzz</p>
-                <p>现在感觉很好</p>
-                <p>已经有困意了</p>
-                <p>晚安宝宝</p>
+                <p>赵瑾这几天都好辛苦</p>
+                <p>学专业课</p>
+                <p>背单词</p>
+                <p>还要上课写论文做比赛</p>
+                <p>心疼她</p>
+                <p>努力的结果一定会有所收获的</p>
+                <p>加油宝宝明天可以好好休息一下</p>
                 <p>爱你</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
