--- a/index.html
+++ b/index.html
@@ -295,13 +295,14 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>赵瑾这几天都好辛苦</p>
-                <p>学专业课</p>
-                <p>背单词</p>
-                <p>还要上课写论文做比赛</p>
-                <p>心疼她</p>
-                <p>努力的结果一定会有所收获的</p>
-                <p>加油宝宝明天可以好好休息一下</p>
+                <p>第一次闪到腰</p>
+                <p>好难受啊</p>
+                <p>终于理解老人家为什么要弓着腰走路了</p>
+                <p>挺又挺不起来</p>
+                <p>弯又弯不下去</p>
+                <p>难受死了</p>
+                <p>如果你在身边就好了</p>
+                <p>想你</p>
                 <p>爱你</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
