--- a/index.html
+++ b/index.html
@@ -295,15 +295,13 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>第一次闪到腰</p>
-                <p>好难受啊</p>
-                <p>终于理解老人家为什么要弓着腰走路了</p>
-                <p>挺又挺不起来</p>
-                <p>弯又弯不下去</p>
-                <p>难受死了</p>
-                <p>如果你在身边就好了</p>
-                <p>想你</p>
-                <p>爱你</p>
+                <p>今天赵瑾陪我去治疗腰了</p>
+                <p>真的很疼</p>
+                <p>刮啊刮</p>
+                <p>按啊按</p>
+                <p>还好有赵瑾在</p>
+                <p>给与了我莫大的力量！</p>
+                <p>爱她</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
         </div>
