--- a/index.html
+++ b/index.html
@@ -295,13 +295,12 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>今天赵瑾陪我去治疗腰了</p>
-                <p>真的很疼</p>
-                <p>刮啊刮</p>
-                <p>按啊按</p>
-                <p>还好有赵瑾在</p>
-                <p>给与了我莫大的力量！</p>
-                <p>爱她</p>
+                <p>好想赵瑾啊</p>
+                <p>今天腰好了些</p>
+                <p>但是心痛了些</p>
+                <p>身体上的痛苦</p>
+                <p>还是抵不过思念的痛</p>
+                <p>想赵瑾</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
         </div>
