--- a/index.html
+++ b/index.html
@@ -295,12 +295,13 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>好想赵瑾啊</p>
-                <p>今天腰好了些</p>
-                <p>但是心痛了些</p>
-                <p>身体上的痛苦</p>
-                <p>还是抵不过思念的痛</p>
-                <p>想赵瑾</p>
+                <p>今天和瑾瑾去公园散步了</p>
+                <p>看到了好多的风筝</p>
+                <p>可惜腰真的很不舒服</p>
+                <p>等过段时间我们一定要去放风筝</p>
+                <p>放泡泡</p>
+                <p>吃淀粉肠</p>
+                <p>(*^▽^*)</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
         </div>
