--- a/index.html
+++ b/index.html
@@ -295,13 +295,11 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>今天和瑾瑾去公园散步了</p>
-                <p>看到了好多的风筝</p>
-                <p>可惜腰真的很不舒服</p>
-                <p>等过段时间我们一定要去放风筝</p>
-                <p>放泡泡</p>
-                <p>吃淀粉肠</p>
-                <p>(*^▽^*)</p>
+                <p>今天我要早早洗澡上床</p>
+                <p>早睡早起</p>
+                <p>希望明天腰能痊愈</p>
+                <p>想把赵瑾抱起来</p>
+                <p>爱她</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
         </div>
