--- a/index.html
+++ b/index.html
@@ -295,10 +295,11 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>今天我要早早洗澡上床</p>
-                <p>早睡早起</p>
-                <p>希望明天腰能痊愈</p>
-                <p>想把赵瑾抱起来</p>
+                <p>今天腰好了好多</p>
+                <p>感觉明天就能抱起来赵瑾了！</p>
+                <p>这几天发现了赵瑾的特殊癖好</p>
+                <p>但是我不说</p>
+                <p>嘻嘻</p>
                 <p>爱她</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
