--- a/index.html
+++ b/index.html
@@ -295,11 +295,16 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>今天腰好了好多</p>
-                <p>感觉明天就能抱起来赵瑾了！</p>
-                <p>这几天发现了赵瑾的特殊癖好</p>
-                <p>但是我不说</p>
-                <p>嘻嘻</p>
+                <p>明天赵瑾要去野餐了</p>
+                <p>今天我们一起去买了好多吃的</p>
+                <p>红色的麻辣王子</p>
+                <p>橙色的虾条</p>
+                <p>黄色的小蛋糕</p>
+                <p>绿色的奶茶</p>
+                <p>紫色的果汁</p>
+                <p>蓝色的蓝莓</p>
+                <p>进货进货！</p>
+                <p>超级开心的大采购</p>
                 <p>爱她</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
