--- a/index.html
+++ b/index.html
@@ -295,17 +295,17 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>明天赵瑾要去野餐了</p>
-                <p>今天我们一起去买了好多吃的</p>
-                <p>红色的麻辣王子</p>
-                <p>橙色的虾条</p>
-                <p>黄色的小蛋糕</p>
-                <p>绿色的奶茶</p>
-                <p>紫色的果汁</p>
-                <p>蓝色的蓝莓</p>
-                <p>进货进货！</p>
-                <p>超级开心的大采购</p>
-                <p>爱她</p>
+                <p>想赵瑾</p>
+                <p>今天一天都没见面</p>
+                <p>赵瑾今天穿了红色的衣裳</p>
+                <p>超级美</p>
+                <p>是我很喜欢的那一件</p>
+                <p>他们野餐一定很开心吧</p>
+                <p>但是晚上赵瑾又去啦啦操</p>
+                <p>又要改文章</p>
+                <p>身心俱疲</p>
+                <p>心疼她</p>
+                <p>希望能赶快把文章结束呀</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
         </div>
