--- a/index.html
+++ b/index.html
@@ -295,17 +295,15 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>想赵瑾</p>
-                <p>今天一天都没见面</p>
-                <p>赵瑾今天穿了红色的衣裳</p>
-                <p>超级美</p>
-                <p>是我很喜欢的那一件</p>
-                <p>他们野餐一定很开心吧</p>
-                <p>但是晚上赵瑾又去啦啦操</p>
-                <p>又要改文章</p>
-                <p>身心俱疲</p>
-                <p>心疼她</p>
-                <p>希望能赶快把文章结束呀</p>
+                <p>今天要写些什么呢</p>
+                <p>很高兴赵瑾愿意发视频到群里</p>
+                <p>我觉得这很光明</p>
+                <p>很包容很大气</p>
+                <p>就是一种很棒的感觉</p>
+                <p>他的文章也在今天发老师了</p>
+                <p>啦啦操跳的也很好看</p>
+                <p>我的赵瑾真的是很优秀的宝宝呀</p>
+                <p>爱她</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
         </div>
