--- a/index.html
+++ b/index.html
@@ -295,14 +295,13 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>今天要写些什么呢</p>
-                <p>很高兴赵瑾愿意发视频到群里</p>
-                <p>我觉得这很光明</p>
-                <p>很包容很大气</p>
-                <p>就是一种很棒的感觉</p>
-                <p>他的文章也在今天发老师了</p>
-                <p>啦啦操跳的也很好看</p>
-                <p>我的赵瑾真的是很优秀的宝宝呀</p>
+                <p>马上要去实习了</p>
+                <p>为期十天</p>
+                <p>也要和赵瑾分开十天</p>
+                <p>今天一起去买了好多零食</p>
+                <p>准备带到南平去酷酷吃</p>
+                <p>明天好好的腻歪一下吧</p>
+                <p>嘿嘿</p>
                 <p>爱她</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
