--- a/index.html
+++ b/index.html
@@ -295,14 +295,12 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>马上要去实习了</p>
-                <p>为期十天</p>
-                <p>也要和赵瑾分开十天</p>
-                <p>今天一起去买了好多零食</p>
-                <p>准备带到南平去酷酷吃</p>
-                <p>明天好好的腻歪一下吧</p>
-                <p>嘿嘿</p>
-                <p>爱她</p>
+                <p>小分别前</p>
+                <p>我们去玩了密室</p>
+                <p>好玩儿</p>
+                <p>希望实习这十天能顺利</p>
+                <p>期待十天后的相见</p>
+                <p>爱赵瑾</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
         </div>
