--- a/index.html
+++ b/index.html
@@ -295,12 +295,18 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>小分别前</p>
-                <p>我们去玩了密室</p>
-                <p>好玩儿</p>
-                <p>希望实习这十天能顺利</p>
-                <p>期待十天后的相见</p>
-                <p>爱赵瑾</p>
+                <p>今天来南平啦</p>
+                <p>实习的第一天</p>
+                <p>天气很潮湿很闷热</p>
+                <p>只有逛校园这一个活动</p>
+                <p>过程很难受很疲惫</p>
+                <p>但是宿舍空调一开</p>
+                <p>配上一口水和一口小零食</p>
+                <p>巴适！</p>
+                <p>实习的第一天</p>
+                <p>虽然没什么事但是还是很累</p>
+                <p>想赵瑾</p>
+                <p>爱你</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
         </div>
