--- a/index.html
+++ b/index.html
@@ -295,17 +295,22 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>今天来南平啦</p>
-                <p>实习的第一天</p>
-                <p>天气很潮湿很闷热</p>
-                <p>只有逛校园这一个活动</p>
-                <p>过程很难受很疲惫</p>
-                <p>但是宿舍空调一开</p>
-                <p>配上一口水和一口小零食</p>
-                <p>巴适！</p>
-                <p>实习的第一天</p>
-                <p>虽然没什么事但是还是很累</p>
-                <p>想赵瑾</p>
+                <p>实习第二天</p>
+                <p>早上爬山超级累</p>
+                <p>主要还是天气</p>
+                <p>真的太难受了</p>
+                <p>闷闷的热热的</p>
+                <p>今天洗了两次澡</p>
+                <p>中午回来一次晚上打球完一次</p>
+                <p>还洗了两套衣服</p>
+                <p>真的是辛辛苦苦充充实实的一天</p>
+                <p>晚上打牌达到一点半</p>
+                <p>输了呜呜</p>
+                <p>赵瑾今天去喝酒了没和我说</p>
+                <p>本来还在敷面膜，然后说去洗个脸把视频挂了</p>
+                <p>结果回来就醉醺醺的</p>
+                <p>我很不开心，我很担心</p>
+                <p>下次一定要先和我说</p>
                 <p>爱你</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
