--- a/index.html
+++ b/index.html
@@ -295,22 +295,14 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>实习第二天</p>
-                <p>早上爬山超级累</p>
-                <p>主要还是天气</p>
-                <p>真的太难受了</p>
-                <p>闷闷的热热的</p>
-                <p>今天洗了两次澡</p>
-                <p>中午回来一次晚上打球完一次</p>
-                <p>还洗了两套衣服</p>
-                <p>真的是辛辛苦苦充充实实的一天</p>
-                <p>晚上打牌达到一点半</p>
-                <p>输了呜呜</p>
-                <p>赵瑾今天去喝酒了没和我说</p>
-                <p>本来还在敷面膜，然后说去洗个脸把视频挂了</p>
-                <p>结果回来就醉醺醺的</p>
-                <p>我很不开心，我很担心</p>
-                <p>下次一定要先和我说</p>
+                <p>实习第三天</p>
+                <p>今天参观了木头公司</p>
+                <p>有好多家具</p>
+                <p>下午去爬了合掌岩</p>
+                <p>那个坡超级超级陡</p>
+                <p>但是他的石窑很震撼</p>
+                <p>今天就是旅游观光的一天</p>
+                <p>开心</p>
                 <p>爱你</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
