--- a/index.html
+++ b/index.html
@@ -295,14 +295,14 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>实习第三天</p>
-                <p>今天参观了木头公司</p>
-                <p>有好多家具</p>
-                <p>下午去爬了合掌岩</p>
-                <p>那个坡超级超级陡</p>
-                <p>但是他的石窑很震撼</p>
-                <p>今天就是旅游观光的一天</p>
-                <p>开心</p>
+                <p>实习第四天</p>
+                <p>非常轻松的一天</p>
+                <p>因为大雨在宿舍休息</p>
+                <p>但是明天好像又要上山</p>
+                <p>不想去</p>
+                <p>希望明天一大早就能下暴雨</p>
+                <p>那就能不去了</p>
+                <p>今天也很想你</p>
                 <p>爱你</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
