--- a/index.html
+++ b/index.html
@@ -295,19 +295,13 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>实习第五天</p>
-                <p>今天是lj带队</p>
-                <p>有一些不一样了</p>
-                <p>可能是我变了</p>
-                <p>也可能是他变了</p>
-                <p>或许我们都变了</p>
-                <p>我没有再感受到曾经那样的窘迫的感觉</p>
-                <p>能有来有去的聊</p>
-                <p>大概率是我变了</p>
-                <p>从视角上，从心态上</p>
-                <p>还有从我的宝宝赵瑾上</p>
-                <p>今天很轻松也很开心</p>
-                <p>依旧想赵瑾</p>
+                <p>实习第六天</p>
+                <p>今天天气很好</p>
+                <p>没有太阳，没有下雨</p>
+                <p>但是有些冷</p>
+                <p>刚好适合爬山</p>
+                <p>还有四天就结束啦</p>
+                <p>想你</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
         </div>
