--- a/index.html
+++ b/index.html
@@ -295,13 +295,16 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>实习第六天</p>
-                <p>今天天气很好</p>
-                <p>没有太阳，没有下雨</p>
-                <p>但是有些冷</p>
-                <p>刚好适合爬山</p>
-                <p>还有四天就结束啦</p>
-                <p>想你</p>
+                <p>实习第七天</p>
+                <p>今天是很休闲的一天</p>
+                <p>自由活动，自由玩了一天</p>
+                <p>他们有人调查了一亩的样地</p>
+                <p>我真的震惊</p>
+                <p>今天的饭都很好吃</p>
+                <p>但是今天拉了三次肚子</p>
+                <p>明天又要上山</p>
+                <p>希望不要太累</p>
+                <p>爱你</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
         </div>
