--- a/index.html
+++ b/index.html
@@ -295,15 +295,17 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>实习第七天</p>
-                <p>今天是很休闲的一天</p>
-                <p>自由活动，自由玩了一天</p>
-                <p>他们有人调查了一亩的样地</p>
-                <p>我真的震惊</p>
-                <p>今天的饭都很好吃</p>
-                <p>但是今天拉了三次肚子</p>
-                <p>明天又要上山</p>
-                <p>希望不要太累</p>
+                <p>实习第八天</p>
+                <p>明天就是最后一天了</p>
+                <p>明天任务好像会有点重</p>
+                <p>但是今天打球又磨破脚了</p>
+                <p>有点不想去</p>
+                <p>anyway</p>
+                <p>今天和王凯老师打球了</p>
+                <p>老师有点基本功的</p>
+                <p>挺厉害</p>
+                <p>明天早上看看起不起得来吧</p>
+                <p>希望赵瑾明天多抓点虫</p>
                 <p>爱你</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
