--- a/index.html
+++ b/index.html
@@ -295,17 +295,15 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>实习第八天</p>
-                <p>明天就是最后一天了</p>
-                <p>明天任务好像会有点重</p>
-                <p>但是今天打球又磨破脚了</p>
-                <p>有点不想去</p>
-                <p>anyway</p>
-                <p>今天和王凯老师打球了</p>
-                <p>老师有点基本功的</p>
-                <p>挺厉害</p>
-                <p>明天早上看看起不起得来吧</p>
-                <p>希望赵瑾明天多抓点虫</p>
+                <p>实习第九天啦</p>
+                <p>今天上午睡了懒觉没有去</p>
+                <p>下午全部都补回来了</p>
+                <p>超级累</p>
+                <p>感觉都有点中暑</p>
+                <p>晚上玩了狼人杀</p>
+                <p>感觉一般般</p>
+                <p>还是期待明天的见面</p>
+                <p>明天见</p>
                 <p>爱你</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
