--- a/index.html
+++ b/index.html
@@ -295,15 +295,10 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>实习第九天啦</p>
-                <p>今天上午睡了懒觉没有去</p>
-                <p>下午全部都补回来了</p>
-                <p>超级累</p>
-                <p>感觉都有点中暑</p>
-                <p>晚上玩了狼人杀</p>
-                <p>感觉一般般</p>
-                <p>还是期待明天的见面</p>
-                <p>明天见</p>
+                <p>分离十日终相见</p>
+                <p>拿下密室九块九</p>
+                <p>吃完了鱼看电影</p>
+                <p>把手牵起把家还</p>
                 <p>爱你</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
