--- a/index.html
+++ b/index.html
@@ -295,11 +295,16 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>分离十日终相见</p>
-                <p>拿下密室九块九</p>
-                <p>吃完了鱼看电影</p>
-                <p>把手牵起把家还</p>
-                <p>爱你</p>
+                <p>春夏之交的五月</p>
+                <p>坐在后座</p>
+                <p>晚风轻轻地从两颊拂过</p>
+                <p>脑袋微微向前倾</p>
+                <p>倚在你的背上</p>
+                <p>前座正好高出半个身子</p>
+                <p>双臂放松张开</p>
+                <p>用你入怀中</p>
+                <p>幸福停在了这个时刻</p>
+                <p>i love you so</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
         </div>
