--- a/index.html
+++ b/index.html
@@ -295,16 +295,21 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>春夏之交的五月</p>
-                <p>坐在后座</p>
-                <p>晚风轻轻地从两颊拂过</p>
-                <p>脑袋微微向前倾</p>
-                <p>倚在你的背上</p>
-                <p>前座正好高出半个身子</p>
-                <p>双臂放松张开</p>
-                <p>用你入怀中</p>
-                <p>幸福停在了这个时刻</p>
-                <p>i love you so</p>
+                <p>浪费了好多好多时间</p>
+                <p>漫无目的地坐在车站</p>
+                <p>路对面的树随风摇曳</p>
+                <p>这边的我们紧紧依偎</p>
+                <p>等车的人们来了又走</p>
+                <p>形形色色，匆匆忙忙</p>
+                <p>不知道坐了多久</p>
+                <p>车怎么不来呢</p>
+                <p>不知道</p>
+                <p>我们离开了车站</p>
+                <p>又跑了一趟来回</p>
+                <p>吃了饭</p>
+                <p>再换个地方坐会</p>
+                <p>等等爱吧</p>
+                <p>爱你</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
         </div>
