--- a/index.html
+++ b/index.html
@@ -295,20 +295,12 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>浪费了好多好多时间</p>
-                <p>漫无目的地坐在车站</p>
-                <p>路对面的树随风摇曳</p>
-                <p>这边的我们紧紧依偎</p>
-                <p>等车的人们来了又走</p>
-                <p>形形色色，匆匆忙忙</p>
-                <p>不知道坐了多久</p>
-                <p>车怎么不来呢</p>
-                <p>不知道</p>
-                <p>我们离开了车站</p>
-                <p>又跑了一趟来回</p>
-                <p>吃了饭</p>
-                <p>再换个地方坐会</p>
-                <p>等等爱吧</p>
+                <p>第一次去玩这种电玩</p>
+                <p>独立的房间真的很适合两个人亲亲</p>
+                <p>像个小酒店</p>
+                <p>今日最佳游戏是大富翁</p>
+                <p>赵瑾的运气真的很好</p>
+                <p>蹭蹭</p>
                 <p>爱你</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
