--- a/index.html
+++ b/index.html
@@ -295,12 +295,12 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>第一次去玩这种电玩</p>
-                <p>独立的房间真的很适合两个人亲亲</p>
-                <p>像个小酒店</p>
-                <p>今日最佳游戏是大富翁</p>
-                <p>赵瑾的运气真的很好</p>
-                <p>蹭蹭</p>
+                <p>今天背了一百个单词</p>
+                <p>好久没有好好背单词了</p>
+                <p>我还要好好监督赵瑾</p>
+                <p>总是不专心</p>
+                <p>还好我在她身边</p>
+                <p>哼哼</p>
                 <p>爱你</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
