--- a/index.html
+++ b/index.html
@@ -295,12 +295,10 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>今天背了一百个单词</p>
-                <p>好久没有好好背单词了</p>
-                <p>我还要好好监督赵瑾</p>
-                <p>总是不专心</p>
-                <p>还好我在她身边</p>
-                <p>哼哼</p>
+                <p>等以后我们生活在一起了</p>
+                <p>我们晚上会一起散步</p>
+                <p>我会每天都背背你</p>
+                <p>一直到我们都老了</p>
                 <p>爱你</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
