--- a/index.html
+++ b/index.html
@@ -295,10 +295,10 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>等以后我们生活在一起了</p>
-                <p>我们晚上会一起散步</p>
-                <p>我会每天都背背你</p>
-                <p>一直到我们都老了</p>
+                <p>八点起床</p>
+                <p>易如反掌</p>
+                <p>我们真的要好好的珍惜每一分每一秒了</p>
+                <p>明天还早起吗嘿嘿</p>
                 <p>爱你</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
