--- a/index.html
+++ b/index.html
@@ -295,10 +295,12 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>八点起床</p>
-                <p>易如反掌</p>
-                <p>我们真的要好好的珍惜每一分每一秒了</p>
-                <p>明天还早起吗嘿嘿</p>
+                <p>明天赵瑾要啦啦操比赛</p>
+                <p>这是第二次看她比赛</p>
+                <p>这次她是c位</p>
+                <p>一定能拿下</p>
+                <p>两个人懂</p>
+                <p>在人群中找到对方</p>
                 <p>爱你</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
