--- a/index.html
+++ b/index.html
@@ -295,12 +295,18 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>明天赵瑾要啦啦操比赛</p>
-                <p>这是第二次看她比赛</p>
-                <p>这次她是c位</p>
-                <p>一定能拿下</p>
-                <p>两个人懂</p>
-                <p>在人群中找到对方</p>
+                <p>恭喜赵瑾</p>
+                <p>蝉联冠军</p>
+                <p>拍了好多照片</p>
+                <p>赵瑾今天很美</p>
+                <p>今晚也是联想拯救者5070ti的发布会</p>
+                <p>比预期贵了1000</p>
+                <p>真的好贵</p>
+                <p>谁懂</p>
+                <p>真的很想买电脑</p>
+                <p>买最好的那种</p>
+                <p>今天最后还是没买</p>
+                <p>赵瑾</p>
                 <p>爱你</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
