--- a/index.html
+++ b/index.html
@@ -295,18 +295,14 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>恭喜赵瑾</p>
-                <p>蝉联冠军</p>
-                <p>拍了好多照片</p>
-                <p>赵瑾今天很美</p>
-                <p>今晚也是联想拯救者5070ti的发布会</p>
-                <p>比预期贵了1000</p>
-                <p>真的好贵</p>
-                <p>谁懂</p>
-                <p>真的很想买电脑</p>
-                <p>买最好的那种</p>
-                <p>今天最后还是没买</p>
-                <p>赵瑾</p>
+                <p>今天的舒芙蕾</p>
+                <p>软软糯糯，甜而不腻</p>
+                <p>口感甚佳，当为仙品</p>
+                <p>买了彩票，血亏二十</p>
+                <p>冥冥之中，劝退电脑</p>
+                <p>明天要给赵瑾改格式咯</p>
+                <p>赵瑾可得好好犒劳我啊</p>
+                <p>明天见</p>
                 <p>爱你</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
