--- a/index.html
+++ b/index.html
@@ -295,14 +295,12 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>今天的舒芙蕾</p>
-                <p>软软糯糯，甜而不腻</p>
-                <p>口感甚佳，当为仙品</p>
-                <p>买了彩票，血亏二十</p>
-                <p>冥冥之中，劝退电脑</p>
-                <p>明天要给赵瑾改格式咯</p>
-                <p>赵瑾可得好好犒劳我啊</p>
-                <p>明天见</p>
+                <p>今天赵瑾说我是伟岸的</p>
+                <p>因为我给她改论文儿了</p>
+                <p>多大点事儿，这有什么</p>
+                <p>谁让我爱你呢</p>
+                <p>谁让你爱我呢</p>
+                <p>这没什么</p>
                 <p>爱你</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
