--- a/index.html
+++ b/index.html
@@ -295,12 +295,12 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>今天赵瑾说我是伟岸的</p>
-                <p>因为我给她改论文儿了</p>
-                <p>多大点事儿，这有什么</p>
-                <p>谁让我爱你呢</p>
-                <p>谁让你爱我呢</p>
-                <p>这没什么</p>
+                <p>今晚又要晚睡了</p>
+                <p>这两天又开始熬夜</p>
+                <p>但是赵瑾这两天睡的倒是早了</p>
+                <p>是谁偷走了我的美梦</p>
+                <p>好吧</p>
+                <p>晚安</p>
                 <p>爱你</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
