--- a/index.html
+++ b/index.html
@@ -295,12 +295,12 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>今晚又要晚睡了</p>
-                <p>这两天又开始熬夜</p>
-                <p>但是赵瑾这两天睡的倒是早了</p>
-                <p>是谁偷走了我的美梦</p>
-                <p>好吧</p>
-                <p>晚安</p>
+                <p>赵瑾不是胖胖猪</p>
+                <p>赵瑾不是胖胖猪</p>
+                <p>赵瑾不是胖胖猪</p>
+                <p>赵瑾不是胖胖猪</p>
+                <p>赵瑾不是胖胖猪</p>
+                <p>赵瑾不是胖胖猪</p>
                 <p>爱你</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
