--- a/index.html
+++ b/index.html
@@ -295,12 +295,12 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>赵瑾不是胖胖猪</p>
-                <p>赵瑾不是胖胖猪</p>
-                <p>赵瑾不是胖胖猪</p>
-                <p>赵瑾不是胖胖猪</p>
-                <p>赵瑾不是胖胖猪</p>
-                <p>赵瑾不是胖胖猪</p>
+                <p>我还以为赵瑾会忘记单词打卡</p>
+                <p>结果发现还是打卡了</p>
+                <p>真是优秀的宝宝</p>
+                <p>明天是赵瑾的病理学考试</p>
+                <p>希望他一切顺利</p>
+                <p>考的都会</p>
                 <p>爱你</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
