--- a/index.html
+++ b/index.html
@@ -295,12 +295,15 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>我还以为赵瑾会忘记单词打卡</p>
-                <p>结果发现还是打卡了</p>
-                <p>真是优秀的宝宝</p>
-                <p>明天是赵瑾的病理学考试</p>
-                <p>希望他一切顺利</p>
-                <p>考的都会</p>
+                <p>今天的捉小三剧本杀很好玩</p>
+                <p>虽然名叫捉小三</p>
+                <p>但是其实只有第一幕是捉小三</p>
+                <p>其他故事都是狗血的剧情了</p>
+                <p>说实话这个本子从故事情节来看真的很差</p>
+                <p>但是玩的还是很欢乐的</p>
+                <p>很不错的一次体验呢</p>
+                <p>和赵瑾一起总是能做好多好玩开心的事</p>
+                <p>今天又多了一个</p>
                 <p>爱你</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
