--- a/index.html
+++ b/index.html
@@ -295,15 +295,14 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>今天的捉小三剧本杀很好玩</p>
-                <p>虽然名叫捉小三</p>
-                <p>但是其实只有第一幕是捉小三</p>
-                <p>其他故事都是狗血的剧情了</p>
-                <p>说实话这个本子从故事情节来看真的很差</p>
-                <p>但是玩的还是很欢乐的</p>
-                <p>很不错的一次体验呢</p>
-                <p>和赵瑾一起总是能做好多好玩开心的事</p>
-                <p>今天又多了一个</p>
+                <p>本来今天对这个泰餐没有多大的期待的</p>
+                <p>没想到</p>
+                <p>是马来西亚菜</p>
+                <p>没有咖喱</p>
+                <p>但是有牛肋条</p>
+                <p>no.1超级好吃</p>
+                <p>ccd是花了一上午挑的</p>
+                <p>不知道你喜不喜欢呢</p>
                 <p>爱你</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
