--- a/index.html
+++ b/index.html
@@ -295,14 +295,24 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>本来今天对这个泰餐没有多大的期待的</p>
-                <p>没想到</p>
-                <p>是马来西亚菜</p>
-                <p>没有咖喱</p>
-                <p>但是有牛肋条</p>
-                <p>no.1超级好吃</p>
-                <p>ccd是花了一上午挑的</p>
-                <p>不知道你喜不喜欢呢</p>
+                <p>在去年的这个时候</p>
+                <p>每每想到保研，夏令营，简历，写邮件。。。</p>
+                <p>我都会很烦躁，很不耐烦</p>
+                <p>很奇怪的一种感觉</p>
+                <p>这个过程是一种日夜重复的</p>
+                <p>感受不到时间的流逝</p>
+                <p>常常发呆、呆滞</p>
+                <p>我也不知道是怎么过来的</p>
+                <p>但是这个过程真的很迷茫无措</p>
+                <p>未来还很远宝宝</p>
+                <p>当下的一切或许难受，或许迷茫</p>
+                <p>但希望你的心中能知道自己想要的未来</p>
+                <p>有所努力的目标</p>
+                <p>累的时候就休息</p>
+                <p>慢的下来，也要能及时回到该有的状态</p>
+                <p>知之行之，无负今日</p>
+                <p>赵瑾要相信自己</p>
+                <p>你是最棒的</p>
                 <p>爱你</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
