--- a/index.html
+++ b/index.html
@@ -295,24 +295,15 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>在去年的这个时候</p>
-                <p>每每想到保研，夏令营，简历，写邮件。。。</p>
-                <p>我都会很烦躁，很不耐烦</p>
-                <p>很奇怪的一种感觉</p>
-                <p>这个过程是一种日夜重复的</p>
-                <p>感受不到时间的流逝</p>
-                <p>常常发呆、呆滞</p>
-                <p>我也不知道是怎么过来的</p>
-                <p>但是这个过程真的很迷茫无措</p>
-                <p>未来还很远宝宝</p>
-                <p>当下的一切或许难受，或许迷茫</p>
-                <p>但希望你的心中能知道自己想要的未来</p>
-                <p>有所努力的目标</p>
-                <p>累的时候就休息</p>
-                <p>慢的下来，也要能及时回到该有的状态</p>
-                <p>知之行之，无负今日</p>
-                <p>赵瑾要相信自己</p>
-                <p>你是最棒的</p>
+                <p>这台ccd是我的第一台相机</p>
+                <p>你的我的都一样嘿嘿</p>
+                <p>虽然他有点旧旧的</p>
+                <p>拍的效果一开始也不是很近人意</p>
+                <p>他没有超高的像素</p>
+                <p>但是总是让人想拿起来把玩</p>
+                <p>爱不释手</p>
+                <p>作为我们的的第一台相机</p>
+                <p>让它陪我们走过往后的岁月吧</p>
                 <p>爱你</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
