--- a/index.html
+++ b/index.html
@@ -295,15 +295,15 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>这台ccd是我的第一台相机</p>
-                <p>你的我的都一样嘿嘿</p>
-                <p>虽然他有点旧旧的</p>
-                <p>拍的效果一开始也不是很近人意</p>
-                <p>他没有超高的像素</p>
-                <p>但是总是让人想拿起来把玩</p>
-                <p>爱不释手</p>
-                <p>作为我们的的第一台相机</p>
-                <p>让它陪我们走过往后的岁月吧</p>
+                <p>今天和赵瑾一起改了她的文章</p>
+                <p>好多细节的问题啊</p>
+                <p>她的队友都是半斤八两</p>
+                <p>不清不楚</p>
+                <p>改的就让人好恼火</p>
+                <p>我们改好了格式，改好了细节</p>
+                <p>希望等明天全部改好了</p>
+                <p>就乘风而上</p>
+                <p>accept</p>
                 <p>爱你</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
