--- a/index.html
+++ b/index.html
@@ -295,15 +295,14 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>今天和赵瑾一起改了她的文章</p>
-                <p>好多细节的问题啊</p>
-                <p>她的队友都是半斤八两</p>
-                <p>不清不楚</p>
-                <p>改的就让人好恼火</p>
-                <p>我们改好了格式，改好了细节</p>
-                <p>希望等明天全部改好了</p>
-                <p>就乘风而上</p>
-                <p>accept</p>
+                <p>这一条是今天的二更</p>
+                <p>求打赏</p>
+                <p>好吧其实是因为昨天没更</p>
+                <p>这两天电脑都放在图书馆87号柜子过夜了</p>
+                <p>在赵瑾的88号上边，是他舍友的</p>
+                <p>今天上午终于改完了赵瑾家族的文章</p>
+                <p>但下午她中文那篇似乎并不顺利</p>
+                <p>希望之后能不要再改改改了</p>
                 <p>爱你</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
