--- a/index.html
+++ b/index.html
@@ -295,14 +295,13 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>这一条是今天的二更</p>
-                <p>求打赏</p>
-                <p>好吧其实是因为昨天没更</p>
-                <p>这两天电脑都放在图书馆87号柜子过夜了</p>
-                <p>在赵瑾的88号上边，是他舍友的</p>
-                <p>今天上午终于改完了赵瑾家族的文章</p>
-                <p>但下午她中文那篇似乎并不顺利</p>
-                <p>希望之后能不要再改改改了</p>
+                <p>好</p>
+                <p>又是一条补更</p>
+                <p>其实我觉得林真真还挺好吃的</p>
+                <p>但是他那个环境确实需要改善</p>
+                <p>味道太大不通风，油烟也需要处理</p>
+                <p>下午偷偷和维多吃了冰饭，晚上没有吃饭</p>
+                <p>不知道有没有瘦呢</p>
                 <p>爱你</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
