--- a/index.html
+++ b/index.html
@@ -295,13 +295,15 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>好</p>
-                <p>又是一条补更</p>
-                <p>其实我觉得林真真还挺好吃的</p>
-                <p>但是他那个环境确实需要改善</p>
-                <p>味道太大不通风，油烟也需要处理</p>
-                <p>下午偷偷和维多吃了冰饭，晚上没有吃饭</p>
-                <p>不知道有没有瘦呢</p>
+                <p>今天又是勤奋的一天啊</p>
+                <p>把毕业论文改好了</p>
+                <p>我发现图书馆这个环境有问题</p>
+                <p>也可能是这个椅子</p>
+                <p>只要我一坐上去</p>
+                <p>不一会就会有便意</p>
+                <p>便便之感觉</p>
+                <p>今天爽爽地拉了两次</p>
+                <p>不知道赵瑾有没有好好拉呢</p>
                 <p>爱你</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
