--- a/index.html
+++ b/index.html
@@ -295,15 +295,12 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>今天又是勤奋的一天啊</p>
-                <p>把毕业论文改好了</p>
-                <p>我发现图书馆这个环境有问题</p>
-                <p>也可能是这个椅子</p>
-                <p>只要我一坐上去</p>
-                <p>不一会就会有便意</p>
-                <p>便便之感觉</p>
-                <p>今天爽爽地拉了两次</p>
-                <p>不知道赵瑾有没有好好拉呢</p>
+                <p>明天就要答辩了</p>
+                <p>有点小紧张</p>
+                <p>一切都准备好了</p>
+                <p>赵瑾能不能快点考完来看我</p>
+                <p>带上ccd给我拍拍照</p>
+                <p>希望一切顺利</p>
                 <p>爱你</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
