--- a/index.html
+++ b/index.html
@@ -295,12 +295,16 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>明天就要答辩了</p>
-                <p>有点小紧张</p>
-                <p>一切都准备好了</p>
-                <p>赵瑾能不能快点考完来看我</p>
-                <p>带上ccd给我拍拍照</p>
-                <p>希望一切顺利</p>
+                <p>今天喝了好多酒</p>
+                <p>好久没喝了</p>
+                <p>lj叫我坐他旁边</p>
+                <p>挺难得的聚餐的机会</p>
+                <p>我就决定陪他kuku喝</p>
+                <p>其实还好</p>
+                <p>我有控制着量</p>
+                <p>要是回家的时候</p>
+                <p>你在就好了</p>
+                <p>想你</p>
                 <p>爱你</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
