--- a/index.html
+++ b/index.html
@@ -295,23 +295,11 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>收到了一个大惊喜</p>
-                <p>我很少收到过其他人送的礼物</p>
-                <p>所以我可能不知道怎么表达这种惊喜</p>
-                <p>但真的很开心</p>
-                <p>这是我大学四年收到过最好的礼物</p>
-                <p>很喜欢fdj黑粉的配色，配白底</p>
-                <p>还有fafu和2025是绿的</p>
-                <p>fafu有四层，深绿、浅绿、白、绿</p>
-                <p>为什么只有这个有四层呢？</p>
-                <p>边缘的绒球手感很好，捏起来舒舒服服的</p>
-                <p>点缀中间的字很合适</p>
-                <p>还有好多好多可以描述的</p>
-                <p>每种颜色，每个字母，每颗小绒球。。。</p>
-                <p>真的很喜欢，谢谢我的宝宝</p>
-                <p>原本普通的学士帽，现在有了无与伦比的色彩</p>
-                <p>我将带着她</p>
-                <p>set sail for next adventure</p>
+                <p>明天要拍毕业写真照了</p>
+                <p>有点小激动</p>
+                <p>希望每一张都出片</p>
+                <p>赵瑾要拍的超级美</p>
+                <p>我要超级帅</p>
                 <p>爱你</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
