--- a/index.html
+++ b/index.html
@@ -295,11 +295,14 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>明天要拍毕业写真照了</p>
-                <p>有点小激动</p>
-                <p>希望每一张都出片</p>
-                <p>赵瑾要拍的超级美</p>
-                <p>我要超级帅</p>
+                <p>今天拍的照片真的好好看啊</p>
+                <p>感觉都算得上人生照片了</p>
+                <p>csh拍照确实有点东西</p>
+                <p>我认可了</p>
+                <p>但最最主要的</p>
+                <p>还是模特好看</p>
+                <p>今天的赵瑾太美了</p>
+                <p>怎么拍都好看</p>
                 <p>爱你</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
